# trying-out-travis

./: .travis.yml  CMakeLists.txt  README.md  funcs.cpp  funcs.hpp  funcs_ut.cpp
